--- a/manifest.json
+++ b/manifest.json
@@ -17,6 +17,6 @@
     ],
     "theme_color": "#FCF2D7",
     "background_color": "#FCF2D7",
-    "display": "standalone",
+    "display": "fullscreen",
 	"gcm_sender_id": "103953800507"
 }
